# Smierx-CLI

./: .gitignore  README.md  main.py  pyproject.toml  test_main.py
app/core/: config.py
app/helper/: ids.py  prints.py
app/schemas/: modules.py  periods.py
app/subcommands/: config_router.py  helper.py  lecture.py  view_router.py
app/subcommands/archiv/: anki.py  lecture.py  notes.py
app/subcommands/config/: create.py  create_module.py
app/subcommands/helper/: prints.py
app/subcommands/views/: modules.py
