[project]
name = "obsidian-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "frontmatter>=3.0.8",
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "python-frontmatter>=1.1.0",
    "typer>=0.15.1",
]
